# knowledge-galaxy

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  integration.yml  release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: constitution.md  design.md
docs/plans/: 2026-03-10-knowledge-galaxy-docs-design.md  2026-03-10-knowledge-galaxy-docs-skeleton-plan.md  2026-03-11-embedded-template-fallback-design.md  2026-03-11-embedded-template-fallback-implementation.md  2026-03-11-github-actions-ci-design.md  2026-03-11-github-actions-ci-implementation.md  2026-03-11-go-port-design.md  2026-03-11-knowledge-galaxy-cli-mvp-design.md  2026-03-11-knowledge-galaxy-cli-mvp-implementation.md  2026-03-11-knowledge-galaxy-template-design.md  2026-03-11-knowledge-galaxy-template-implementation.md  2026-03-11-local-git-worktree-project-design.md  2026-03-11-local-git-worktree-project-support.md  2026-03-11-multi-language-layout-baseline.txt  2026-03-11-multi-language-layout-design.md  2026-03-11-multi-language-layout-implementation.md  2026-03-11-pure-tool-repo-refactor.md  (+49 more)
templates/: daily.md  decision.md  note.md  project.md  reference.md  review.md  theme.md
tests/: helpers.py  test_cli_capture.py  test_cli_create.py  test_cli_project_remote.py  test_cli_query.py  test_cli_smoke.py  test_cli_validate.py  test_go_cli_behavior.py  test_rust_cli_behavior.py
(+56 files in other folders)
